<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Ytasks</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="hint_edittext_login_name">Email</string>
    <string name="hint_edittext_login_pass">Password</string>
    <string name="title_activity_folder">Task Manager</string>
    <string name="title_activity_task">Task Manager</string>
    <string name="title_activity_new_task">Create new Task</string>
    <string name="title_activity_new_account">NewAccountActivity</string>
    <string name="lbl_first_name">First Name</string>
    <string name="lbl_last_name">Last Name</string>
    <string name="lbl_password">Password</string>
    <string name="lbl_phone">Phone</string>
    <string name="lbl_birthday">Birthday</string>
    <string name="lbl_facebook">Facebook</string>
    <string name="lbl_email">Email</string>
    <string name="btn_lbl_save">Save</string>
    <string name="btn_lbl_add">Add</string>

    <string-array name="status_array">
        <item>New</item>
        <item>In Progress</item>
        <item>Resolved</item>
        <item>Feedback</item>
        <item>Closed</item>
    </string-array>
    <string-array name="task_type_array">
        <item>Single Task </item>
        <item>Check List</item>
    </string-array>
    <string-array name="priority_array">
        <item>Low</item>
        <item>Normal</item>
        <item>Urgent</item>
        <item>Immediate</item>
    </string-array>

    <string name="new_task_title">Title</string>
    <string name="new_task_description">Description</string>
    <string name="new_task_status">Status</string>
    <string name="new_task_spend_time">Spend time</string>
    <string name="new_task_start_day">Start day</string>
    <string name="new_task_due_day">Due day</string>
    <string name="new_task_done">Done</string>
    <string name="new_task_priority">Priority</string>
    <string name="title_activity_group_job">Group Jobs</string>

    <string-array name="job_category_array">
        <item>Work</item>
        <item>Study</item>
        <item>Travel</item>
        <item>Cook</item>
    </string-array>
    
    <string name="numOfGvCategory">3</string>
    
    <string name="action_select_category">Select</string>
    <string name="action_create_category">Create</string>
    <string name="action_edit_category">Edit</string>
    <string name="action_delete_category">Delete</string>

    <string name="title_activity_new_check_list">Create your check list</string>
    <string name="title_activity_edit_task">Task Edit</string>
    <string name="title_activity_check_list_detail">CheckListDetailActivity</string>

</resources>