<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/action_select_category"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_select_category">
    </item>
    <item
        android:id="@+id/action_create_category"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_create_category">
    </item>
    <item
        android:id="@+id/action_edit_category"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_edit_category">
    </item>
    <item
        android:id="@+id/action_delete_category"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_delete_category">
    </item>   

</menu>