<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scrollView1"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".NewTaskActivity" >

    <LinearLayout
        android:id="@+id/LinearLayout1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical" >
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp" >

            <TextView
                android:id="@+id/textView1"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:text="@string/new_task_title" />

            <EditText
                android:id="@+id/newTaskTilleField"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="text" >

                <requestFocus />
            </EditText>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="top" >

            <TextView
                android:id="@+id/textView2"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:text="@string/new_task_description" />

            <EditText
                android:id="@+id/newTaskDecripField"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:hint=""
                android:inputType="textMultiLine"
                android:lines="3" >
            </EditText>
        </LinearLayout>
        
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp" >

            <TextView
                android:id="@+id/textView1"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:text="Assignee" />

            <MultiAutoCompleteTextView
                android:id="@+id/txtSearchContactQuery"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:completionThreshold="1"
                android:focusableInTouchMode="true"
                android:imeOptions="actionDone" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:gravity="center_vertical" >

            <TextView
                android:id="@+id/textView3"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:text="@string/new_task_status" />

            <Spinner
                android:id="@+id/spinStatus"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp" >

            <TextView
                android:id="@+id/textView4"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:text="@string/new_task_spend_time" />

            <EditText
                android:id="@+id/newTaskSpendTime"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="number" >
            </EditText>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:gravity="center_vertical" >

            <TextView
                android:id="@+id/textView5"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:text="@string/new_task_priority" />

            <Spinner
                android:id="@+id/spinPriority"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp" >

            <TextView
                android:id="@+id/textView9"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:text="@string/new_task_start_day" />

            <Button
                android:id="@+id/btnSDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@android:drawable/editbox_background"
                android:text="Start Date" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginBottom="@dimen/activity_vertical_margin" >

            <TextView
                android:id="@+id/textView11"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:text="@string/new_task_due_day" />

            <Button
                android:id="@+id/btnDDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@android:drawable/editbox_background"
                android:text="Due Date" />
        </LinearLayout>



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginBottom="@dimen/activity_vertical_margin" >

            <TextView
                android:id="@+id/textView12"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:text="Set Alert" />

            <Button
                android:id="@+id/btnAlrDate"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@android:drawable/editbox_background"
                android:text="Date" />

            <Button
                android:id="@+id/btnAlrtTime"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.6"
                android:background="@android:drawable/editbox_background"
                android:text="Time" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp" >

            <TextView
                android:id="@+id/textView15"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:text="@string/new_task_done" />

            <SeekBar
                android:id="@+id/seekBar1"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <TextView
                android:id="@+id/txtPercent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|center_horizontal"
                android:text=""
                android:textAppearance="?android:attr/textAppearanceSmall" />
        </LinearLayout>

        <Button
            android:id="@+id/btnSaveTask"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/btn_login"
            android:text="@string/btn_lbl_save"
            android:textColor="#FFFFFF" />
    </LinearLayout>

</ScrollView>